// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar render avatar not photo 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 60,
      "height": 120,
      "justifyContent": "center",
      "width": 120,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 66,
          "lineHeight": 72,
        },
        undefined,
      ]
    }
  >
    И
  </Text>
</View>
`;

exports[`Avatar render avatar with photo 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 60,
      "height": 120,
      "justifyContent": "center",
      "width": 120,
    }
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      Object {
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      Object {
        "borderRadius": 60,
        "height": 120,
        "width": 120,
      }
    }
  />
</View>
`;

exports[`Avatar render without avatar 1`] = `null`;
